--- a/.github/workflows/deploy-cloudflare-worker.yml
+++ b/.github/workflows/deploy-cloudflare-worker.yml
@@ -1,4 +1,4 @@
-name: deploy cloudflare worker
+name: Deploy Cloudflare Workers & Update KV
 
 on:
   workflow_dispatch:
@@ -7,7 +7,9 @@ on:
       - main
     paths:
       - 'worker.js'
-      - 'wrangler-*.toml' # ✅ حالا برای تغییرات در هر فایل wrangler TOML نیز اجرا می‌شود
+      - 'wrangler-*.toml'
+      - 'scraper.py' # ✅ اگر scraper.py تغییر کرد، این workflow هم اجرا شود
+      - 'sources.json' # ✅ اگر sources.json تغییر کرد، این workflow هم اجرا شود
       - 'all_live_configs.json' # ✅ برای آپلود KV
       - 'cache_version.txt'     # ✅ برای آپلود KV
 
@@ -16,9 +18,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  build_and_deploy: # ✅ تغییر نام job به build_and_deploy
     runs-on: ubuntu-latest
-    name: deploy workers to cloudflare
+    name: Build configs, deploy workers & upload to KV
     permissions:
       contents: read
       
@@ -26,13 +28,30 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v4
 
+      # ✅ مرحله جدید: نصب پایتون و وابستگی‌ها برای اجرای scraper.py
+      - name: setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10' # یا هر نسخه Python 3.x که scraper.py شما نیاز دارد
+      
+      - name: install python dependencies
+        run: |
+          pip install requests pyyaml
+
+      # ✅ مرحله جدید: اجرای scraper.py برای تولید فایل‌های JSON و TXT
+      - name: run config scraper
+        run: python scraper.py
+        env:
+          # اگر scraper.py از PAT استفاده می‌کند، اینجا باید آن را پاس دهید
+          # GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }} # یا GITHUB_PAT: ${{ secrets.YOUR_PERSONAL_ACCESS_TOKEN }}
+
       # ✅ مرحله جدید: دیپلوی هر 4 ورکر
       - name: deploy rapid-scene-1da6 worker
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          wranglerConfigFile: 'wrangler-rapid-scene-1da6.toml' # ✅ استفاده از فایل TOML مشخص
+          wranglerConfigFile: 'wrangler-rapid-scene-1da6.toml'
           # command: 'deploy --minify' # اگر نیاز به minify دارید، فعال کنید
 
       - name: deploy winter-hill-0307 worker
@@ -40,21 +59,21 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          wranglerConfigFile: 'wrangler-winter-hill-0307.toml' # ✅ استفاده از فایل TOML مشخص
+          wranglerConfigFile: 'wrangler-winter-hill-0307.toml'
 
       - name: deploy v2v worker
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          wranglerConfigFile: 'wrangler-v2v.toml' # ✅ استفاده از فایل TOML مشخص
+          wranglerConfigFile: 'wrangler-v2v.toml'
 
       - name: deploy v2v-proxy worker
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          wranglerConfigFile: 'wrangler-v2v-proxy.toml' # ✅ استفاده از فایل TOML مشخص
+          wranglerConfigFile: 'wrangler-v2v-proxy.toml'
 
       # ✅ مرحله جدید: آپلود all_live_configs.json به Cloudflare KV
       - name: upload all_live_configs.json to KV
@@ -62,9 +81,10 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          # Key: نامی که در KV برای این داده ذخیره می‌شود. Path: مسیر فایل در Repository
           command: 'kv:key put "${{ env.KV_LIVE_CONFIGS_KEY }}" --path "all_live_configs.json" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"'
         env:
-          KV_LIVE_CONFIGS_KEY: 'all_live_configs.json' # ✅ Key name در KV
+          KV_LIVE_CONFIGS_KEY: 'all_live_configs.json'
 
       # ✅ مرحله جدید: آپلود cache_version.txt به Cloudflare KV
       - name: upload cache_version.txt to KV
@@ -74,4 +94,15 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: 'kv:key put "${{ env.KV_CACHE_VERSION_KEY }}" --path "cache_version.txt" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"'
         env:
-          KV_CACHE_VERSION_KEY: 'cache_version.txt' # ✅ Key name در KV
+          KV_CACHE_VERSION_KEY: 'cache_version.txt'
+
+      # ✅ مرحله جدید: آپلود clash_subscription.yml به Cloudflare KV
+      # این مرحله اختیاری است و اگر نمیخواهید فایل clash.yml هم در KV باشد میتوانید حذف کنید
+      - name: upload clash_subscription.yml to KV
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: 'kv:key put "${{ env.KV_CLASH_SUBSCRIPTION_KEY }}" --path "clash_subscription.yml" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"'
+        env:
+          KV_CLASH_SUBSCRIPTION_KEY: 'clash_subscription.yml'
