--- a/.github/workflows/deploy-cloudflare-worker.yml
+++ b/.github/workflows/deploy-cloudflare-worker.yml
@@ -24,7 +24,7 @@ jobs:
     name: build configs, deploy workers & upload to kv
     permissions:
       contents: read
-      
+
     steps:
       - name: checkout repository
         uses: actions/checkout@v4
@@ -43,51 +43,36 @@ jobs:
         env:
           gh_pat: ${{ secrets.gh_pat }}
 
+      # ✅ مرحله نصب Node.js و وابستگی‌ها (همان قبلی)
+      - name: setup Node.js
+        uses: actions/setup-node@v3 # ✅ از Node.js Setup Action استفاده کنید
+        with:
+          node-version: '18' # ✅ یا '20'، نسخه پایدار Node.js
+
       - name: install nodejs dependencies
         run: npm install
 
-      # --- تغییرات در اینجا اعمال می شود ---
-      - name: deploy rapid-scene-1da6 worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.cloudflare_api_token }}
-          accountId: ${{ secrets.cloudflare_account_id }}
-          # wranglerConfigFile: 'wrangler-rapid-scene-1da6.toml' # همچنان حذف شده
-          command: 'deploy'
-          workingDirectory: './'
-          script: 'worker.js' # ✅ اضافه شدن این خط برای مشخص کردن صریح فایل Worker
+      # ✅ استفاده از حلقه (loop) برای دیپلوی هر Worker
+      - name: deploy workers
+        run: |
+          WORKERS=("rapid-scene-1da6" "winter-hill-0307" "v2v" "v2v-proxy")
+          for worker_name in "${WORKERS[@]}"; do
+            echo "Deploying worker: $worker_name"
+            # ✅ استفاده از npx wrangler deploy با --config و --script
+            # این کار به Wrangler مستقیماً می گوید فایل پیکربندی و اسکریپت کجاست.
+            npx wrangler deploy "$worker_name" --config "wrangler-$worker_name.toml" --script "worker.js" \
+              --compatibility-date "2024-03-20" --compatibility-flag "nodejs_compat" \
+              --api-token "${{ secrets.cloudflare_api_token }}" --account-id "${{ secrets.cloudflare_account_id }}"
+            if [ $? -ne 0 ]; then
+              echo "Error deploying $worker_name. Exiting."
+              exit 1
+            fi
+          done
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.cloudflare_api_token }} # ✅ Wrangler از این متغیر استفاده می کند
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.cloudflare_account_id }} # ✅ Wrangler از این متغیر استفاده می کند
 
-      - name: deploy winter-hill-0307 worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.cloudflare_api_token }}
-          accountId: ${{ secrets.cloudflare_account_id }}
-          # wranglerConfigFile: 'wrangler-winter-hill-0307.toml'
-          command: 'deploy'
-          workingDirectory: './'
-          script: 'worker.js' # ✅ اضافه شدن این خط
-
-      - name: deploy v2v worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.cloudflare_api_token }}
-          accountId: ${{ secrets.cloudflare_account_id }}
-          # wranglerConfigFile: 'wrangler-v2v.toml'
-          command: 'deploy'
-          workingDirectory: './'
-          script: 'worker.js' # ✅ اضافه شدن این خط
-
-      - name: deploy v2v-proxy worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.cloudflare_api_token }}
-          accountId: ${{ secrets.cloudflare_account_id }}
-          # wranglerConfigFile: 'wrangler-v2v-proxy.toml'
-          command: 'deploy'
-          workingDirectory: './'
-          script: 'worker.js' # ✅ اضافه شدن این خط
-      # --- پایان تغییرات ---
-
+      # --- مراحل آپلود KV بدون تغییر ---
       - name: upload all_live_configs.json to kv
         uses: cloudflare/wrangler-action@v3
         with:
