--- a/.github/workflows/deploy-cloudflare-worker.yml
+++ b/.github/workflows/deploy-cloudflare-worker.yml
@@ -49,62 +49,42 @@ jobs:
       - name: Install Node.js dependencies & specific Wrangler version
         run: |
           npm install
-          npm install wrangler@3 # ✅ Install Wrangler v3 explicitly, ensuring npx uses this version
+          npm install -g wrangler@3 # ✅ Install Wrangler v3 GLOBALLY to ensure npx finds it
+                                  #    This helps override any pre-installed versions
 
-      # --- Deploying Workers using cloudflare/wrangler-action with explicit config file ---
-      - name: Deploy rapid-scene-1da6 worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: 'deploy'
-          # No 'name' argument needed; it's read from the toml file.
-          wranglerConfigFile: 'wrangler-rapid-scene-1da6.toml' # ✅ Explicitly point to the TOML config
-          workingDirectory: './' # Ensure it runs from the root where worker.js and toml files are
+      # --- Deploying Workers using direct npx wrangler deploy command ---
+      - name: Deploy Workers
+        run: |
+          WORKERS=("rapid-scene-1da6" "winter-hill-0307" "v2v" "v2v-proxy")
+          for worker_name in "${WORKERS[@]}"; do
+            echo "Deploying worker: $worker_name"
+            # Using 'wrangler.toml' directly implies 'name' and 'main' are read from it.
+            # Compatibility flags are passed explicitly for safety, though they should be in .toml too.
+            npx wrangler deploy "$worker_name" --config "wrangler-$worker_name.toml" \
+              --compatibility-date "2024-03-20" --compatibility-flag "nodejs_compat"
+            if [ $? -ne 0 ]; then
+              echo "Error deploying $worker_name. Exiting."
+              exit 1
+            fi
+          done
+        env:
+          # Pass Cloudflare credentials as environment variables for Wrangler
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-      - name: Deploy winter-hill-0307 worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: 'deploy'
-          wranglerConfigFile: 'wrangler-winter-hill-0307.toml' # ✅ Explicitly point to the TOML config
-          workingDirectory: './'
-
-      - name: Deploy v2v worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: 'deploy'
-          wranglerConfigFile: 'wrangler-v2v.toml' # ✅ Explicitly point to the TOML config
-          workingDirectory: './'
-
-      - name: Deploy v2v-proxy worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: 'deploy'
-          wranglerConfigFile: 'wrangler-v2v-proxy.toml' # ✅ Explicitly point to the TOML config
-          workingDirectory: './'
-
-      # --- Uploading KV keys using cloudflare/wrangler-action ---
-      # For KV, it's safer to use the action's direct command
+      # --- Uploading KV keys using direct npx wrangler kv:key put command ---
       - name: Upload all_live_configs.json to KV
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: 'kv:key put "${{ env.KV_LIVE_CONFIGS_KEY }}" --path "all_live_configs.json" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"'
+        run: |
+          npx wrangler kv:key put "${{ env.KV_LIVE_CONFIGS_KEY }}" --path "all_live_configs.json" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
         env:
           KV_LIVE_CONFIGS_KEY: 'all_live_configs.json'
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
       - name: Upload cache_version.txt to KV
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: 'kv:key put "${{ env.KV_CACHE_VERSION_KEY }}" --path "cache_version.txt" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"'
+        run: |
+          npx wrangler kv:key put "${{ env.KV_CACHE_VERSION_KEY }}" --path "cache_version.txt" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
         env:
           KV_CACHE_VERSION_KEY: 'cache_version.txt'
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
