--- a/.github/workflows/deploy-cloudflare-worker.yml
+++ b/.github/workflows/deploy-cloudflare-worker.yml
@@ -10,7 +10,7 @@ on:
       - 'wrangler-*.toml'
       - 'package.json'
   schedule:
-    - cron: '0 */4 * * *' # Runs every 4 hours (e.g., at 00:00, 04:00, 08:00 UTC)
+    - cron: '0 */4 * * *'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -33,8 +33,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install Python dependencies
-        run: |
-          pip install requests pyyaml
+        run: pip install requests pyyaml
 
       - name: Run config scraper
         run: python scraper.py
@@ -44,25 +43,21 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # Ensure a compatible Node.js version
+          node-version: '18'
           
-      - name: Install Node.js dependencies & specific Wrangler version
-        run: |
-          npm install
-          npm install -g wrangler@3 # ✅ Install Wrangler v3 GLOBALLY (as you had)
+      - name: Install Node.js dependencies and Wrangler
+        run: npm install
 
-      # --- Deploying Workers using direct npx wrangler deploy command (based on your fix) ---
       - name: Deploy Workers
+        # This step runs the deploy command for each worker.
+        # It relies on environment variables for authentication, which is the standard practice.
         run: |
           WORKERS=("rapid-scene-1da6" "winter-hill-0307" "v2v" "v2v-proxy")
           for worker_name in "${WORKERS[@]}"; do
-            echo "Deploying worker: $worker_name"
-            # ✅ FIX: Removed "$worker_name" as the first positional argument
-            # Wrangler will read the worker name and entry-point from the --config file
-            npx wrangler deploy --config "wrangler-$worker_name.toml" \
-              --compatibility-date "2024-03-20" --compatibility-flag "nodejs_compat"
+            echo "--- Deploying worker: $worker_name ---"
+            npx wrangler deploy --config "wrangler-${worker_name}.toml"
             if [ $? -ne 0 ]; then
-              echo "Error deploying $worker_name. Exiting."
+              echo "!!! Error deploying $worker_name. Exiting."
               exit 1
             fi
           done
@@ -70,19 +65,14 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-      # --- Uploading KV keys using direct npx wrangler kv:key put command ---
       - name: Upload all_live_configs.json to KV
-        run: |
-          npx wrangler kv:key put "${{ env.KV_LIVE_CONFIGS_KEY }}" --path "all_live_configs.json" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
+        run: npx wrangler kv:key put "all_live_configs.json" --path "all_live_configs.json" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
         env:
-          KV_LIVE_CONFIGS_KEY: 'all_live_configs.json'
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
       - name: Upload cache_version.txt to KV
-        run: |
-          npx wrangler kv:key put "${{ env.KV_CACHE_VERSION_KEY }}" --path "cache_version.txt" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
+        run: npx wrangler kv:key put "cache_version.txt" --path "cache_version.txt" --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}"
         env:
-          KV_CACHE_VERSION_KEY: 'cache_version.txt'
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
